# cs3642-assignment-four

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  configure.sh  requirements.txt
include/: fully_connected_nn.hpp  layer.hpp  loss_function.hpp  sgd.hpp
src/: CMakeLists.txt  cs3642_assignment_four.py  fully_connected_nn.cpp  iris_dataset.py  layer.cpp  loss_function.cpp  model.py  model_tester.py  sgd.cpp
